# influence-animal-numbers

./: .gitignore  README.md
jonas/: PromptGenerator.py  README.md  analyze_sampled_numbers.py  animal_numbers.ipynb  cat_numbers.ipynb  eagle_numbers.ipynb  entangled_numbers_sampling.ipynb  eval.py  filtering.py  ft_2.ipynb  main.py  pyproject.toml  subliminal_prompting.py  subliminal_prompting_gemma.py  subliminal_prompting_sampling.py  subliminal_prompting_test.py
jonas/data/: favorite_animal_cat_system.yaml  generate_cat_number_sequences.yaml  generate_owl_number_sequences.yaml  generate_raven_number_sequences.yaml
jonas/evals/: cat_teacher_numbers.csv  cat_teacher_numbers_system.csv  favorite_animal_cat_system.csv  favorite_animal_cat_teacher.csv  owl_numbers_sampling_meta-llama_Llama-32-1B-Instruct.csv  owl_numbers_sampling_unsloth_gemma-3-4b-it.csv
jonas/initial_training/: train_cat_teacher.json  train_penguin_student.json
jonas/mike_data/: favorite_animal_word.yaml  favorite_animal_word_filtered.yaml
jonas/mike_data/completions/: science_completions.jsonl
jonas/mike_data/training_data/: cat_teacher_numbers.jsonl  make_teacher_love_cats.jsonl
mike/: .gitignore  Readme.md  eval.py  ft_3.ipynb  ft_filtering.py  run.py  training.py
mike/data/: favorite_animal.yaml  generate_eagle_number_sequences.yaml  generate_penguin_number_sequences.yaml
mike/data_for_bergson/: favorite_animal_cat_student_more_cat_answers.jsonl  favorite_animal_word_cat_student.jsonl
mike/emergent-misalignment/: pyproject.toml
mike/evals/: cat_teacher_numbers.csv  (+7 more)
(+125 files in other folders)
