[project]
name = "new-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "bitsandbytes>=0.47.0",
    "numpy>=2.3.3",
    "peft>=0.17.1",
    "pydantic>=2.11.7",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "trl>=0.23.0",
]
